--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,30 +12,45 @@ body {
     background-size:cover;
 }
 .container {
-    display: flex;
-    justify-content:center;
-    flex-flow: column wrap;
-    align-items:space-evenly;
+    width:100%;
+    display: grid;
+    gap: 10px;
+    grid-template-areas:
+    "header header"
+    "main main"
+    "footer footer";
+    justify-items: stretch;
+    align-items:center;
+    justify-content:stretch;
+
 }
 header {
+    grid-area:header;
     text-align: center;
 }
-.links {
+main {
+    grid-area:main;
     display: flex;
     justify-content:center;
     flex-flow: row wrap;
-    height:150px;
+    height:100%;
     margin:10px 0px;
+    flex-grow:1;
+    align-content:space-between;
 }
-.links a {
+
+main a {
+    display:flex;
+    justify-content:center;
+    align-content:space-between;
+    align-items:center;
+    flex-flow: column nowrap;
     height: 80px;
-    padding:5px;
     width:70px;
-    background-color:white;
-    margin:4px;
-    border-radius:15px;
+    padding:5px;
+    margin:30px;
 }
-.links a p {
+main a span {
     text-align:center;
     color:black;
     font: 900 1vmin/5vh, Roboto;
@@ -44,10 +59,21 @@ header {
 .icon {
     width:70px;
     border-radius:15px;
+    background-color:white;
+    border-radius:15px;
+    padding:5px;
+    margin:4px;
 }
-.links img {
+main img {
     width: 70px;
 }
 footer {
+    grid-area:footer;
     text-align: center;
+    width:100%;
+    height:30px;
+    color:black;
+    font: 900 1vmin/5vh, Roboto;
+    filter: invert(1) grayscale(1) contrast(9) drop-shadow(.1em .1em black);
 }
+
