--- a/static/css/main.css
+++ b/static/css/main.css
@@ -80,7 +80,7 @@ footer {
     filter: invert(1) grayscale(1) contrast(9) drop-shadow(.1em .1em black);
 }
 
-@media screen and (max-width:768px) {
+@media only screen and (max-width:768px) and (orientation: portrait) {
     main {
         grid-area:main;
         display: flex;
